# wapmh

./: .gitignore  Containerfile  README.md  Taskfile.yaml  default.env  doap.ttl  pyproject.toml  wapmh.py
example/: data.ttl  more_data.ttl
example/more_queries/: allHeadersSelect.rq  dateRangeHeadersSelect.rq  identifiedHeaderSelect.rq  recordConstruct.rq  recordOaiDcConstruct.rq
example/queries/: allHeadersSelect.rq  dateRangeHeadersSelect.rq  recordConstruct.rq  recordOaiDcConstruct.rq
tests/: test_experiments.py  test_wapmh.py
wapmh/: adapters.py  config.py  repository.py  store.py
wapmh/model/: __init__.py  oai_pmh.py
