[project]
name = "wapmh"
version = "0.1.0"
description = "Webarchive Public Metadata Harvesting"
authors = [
    {name = "Natanael Arndt",email = "n.arndt@dnb.de"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "uvicorn (>=0.34.0,<0.35.0)",
  "fastapi (>=0.115.4,<0.116)",
  "loguru (>=0.7.3,<0.8.0)",
  "fastapi-xml (>=1.1.1,<2.0.0)",
  "stringcase (>=1.2.0,<2.0.0)",
  "rdflib (>=7.1.4,<8.0.0)",
  "xsdata @ git+https://github.com/white-gecko/xsdata.git@injectElementTree",
  "dcxml (>=0.1.2,<0.2.0)",
  "pydantic-settings (>=2.10.1,<3.0.0)",
  "query-collection (>=0.1.2,<0.2.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.8"}
ruff = "^0.9.6"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
